--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,33 @@ footer p a{
     color: black;
 }
 
+/*paginas*/
+/*sobre mi*/
+.container-sobre_mi{
+    display: flex;
+    flex-direction: row;
+}
+.text-sobre_mi{
+
+}
+#h1-contacto{
+    display: none;
+}
+
 @media screen and (max-width: 480px) {
+
+#contacto h2, p{
+    display: none;
+}
+#h1-contacto{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    background-color: #EBD4BC;
+    margin: 0;
+    padding: 20px;
+    color: #5C3208;
+}
 
 .logo{
     width: 90px;
