--- a/css/style.css
+++ b/css/style.css
@@ -592,10 +592,14 @@ footer p a{
 /*paginas */
 
 
+/*Sobre mi*/
+
+.art-2{
+    background-color: #EBD4BC;
+}
 
 
 /*formacion*/
-
 
 .titulo-formacion h1{
     font-size: 50px;
@@ -611,6 +615,7 @@ footer p a{
 .text-mobile-formacion p{
     display: inline;
 }
+
 
 footer{
     display: flex;
