--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,21 @@ header {
 .logo img {
   width: 120px;
   padding: 20px;
+  animation-name: logo;
+  animation-iteration-count: 2;
+  animation-timing-function: ease-out;
+  animation-duration: 3s;
+  animation-delay: 3s;
 }
 
+@keyframes logo {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .nav-list {
   display: flex;
   list-style-type: none;
@@ -248,6 +261,18 @@ header {
   width: 100%;
   align-items: center;
   padding-bottom: 250px;
+}
+
+.boton-arriba {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 10px;
+}
+
+.boton-arriba a {
+  text-decoration: none;
+  font-size: 30px;
+  color: #5C3208;
 }
 
 footer {
